--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-cli": "^6.16.0",
-    "cross-env": "^3.1.3",
-    "pomjs": "^0.0.18"
+    "babel-cli": "6.16.0",
+    "cross-env": "3.1.3",
+    "pomjs": "0.0.22"
   },
   "devDependencies": {}
 }
