--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "build": "cross-env BUILD=true node src/index.js && babel src -d  dist",
     "server": "cross-env VUE_ENV=server NODE_ENV=production node dist/index.js",
-    "dev": "cross-env VUE_ENV=server  node --debug src/index.js "
-
+    "dev": "./fetch_service.sh && cross-env VUE_ENV=server  node --debug src/index.js "
   },
   "repository": {
     "type": "git",
@@ -17,7 +16,8 @@
   "dependencies": {
     "babel-cli": "6.16.0",
     "cross-env": "3.1.3",
-    "pomjs": "0.0.23"
+    "pomjs": "0.0.62",
+    "qc-ui-component": "^0.0.21"
   },
   "devDependencies": {}
 }
